Ready for code review

--- a/src/main/resources/static/success.html
+++ b/src/main/resources/static/success.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Error</title>
+    <title>Success</title>
 </head>
 <body>
-<h2>Error! User not added</h2>
-<a href="index.html">Back</a>
+    <h2>Success!! User added</h2>
+    <a href="index.html">Back</a>
 </body>
 </html>
